--- a/pages/css/comentarios.css
+++ b/pages/css/comentarios.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Open+Sans&display=swap');
 
 * {
     margin: 0;
@@ -45,6 +45,40 @@ li:hover {
     height: auto;
 }
 
+.main-conteiner {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.conteiner {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 15px;
+    column-gap: 40px;
+}
+
+.comment {
+    width: 90%;
+    height: 400px;
+    font-size: 1.2rem;
+    font-family: 'Open-sans', sans-serif;
+    background-color: #4371F0;
+    border-radius: 5px;
+    display: flex;
+    color: #fff;
+    font-size: 17px;
+}
+
+.user {
+    height: 60px;
+    width: 60px;
+    margin: 5px 10px 15px;
+    border-radius: 50%;
+}
+
 footer {
     height: 300px;
     margin-top: 50px;
@@ -66,4 +100,65 @@ span {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.social-media {
+    width: 133px;
+    margin: 0 auto;
+    height: 65px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.github {
+    height: 50px;
+}
+
+.discord {
+    height: 50px;
+    border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+    .footer-navigation {
+        display: block;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .corpo {
+        margin-left: 18px;
+    }
+
+    .social-media {
+        margin-top: 10px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 820px) {
+    .corpo {
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 540px) {
+    .footer-navigation {
+        display: block;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .corpo {
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 1280px) {
+    .corpo {
+        margin: 0 auto;
+    }
 }
