--- a/pages/css/fotos.css
+++ b/pages/css/fotos.css
@@ -45,6 +45,38 @@ li:hover {
     height: auto;
 }
 
+.cards-conteiner {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.cards-content {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    row-gap: 15px;
+    column-gap: 40px;
+}
+
+.card {
+    width: 100%;
+    height: 600px;
+    background-color: #181920;
+    background-size: cover;
+    background-position: 50% 50%;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 1s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 0 0 20px 10px;
+    color: #fff;
+    font-size: 17px;
+}
+
 footer {
     height: 300px;
     margin-top: 50px;
@@ -66,4 +98,128 @@ span {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.social-media {
+    width: 133px;
+    height: 65px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.github {
+    height: 50px;
+}
+
+.discord {
+    height: 50px;
+    border-radius: 10px;
+}
+
+.error {
+    width: 1400px;
+    height: 35px;
+    position: fixed;
+    font-size: 1.2rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: initial;
+    margin: 0 auto;
+    background-color:#cc2900;
+}
+
+.error-mobile {
+    display: none;
+}
+
+banner-1 {
+    background-image: url(https://i.pinimg.com/1200x/94/9e/6b/949e6bb0e9f2f6afa636c8ce8d20b1e2.jpg);
+}
+
+banner-2 {
+    background-image: url(https://www.targethd.net/wp-content/uploads/2019/08/homem-de-ferro-vingadores-ultimato.jpg);
+}
+
+banner-3 {
+    background-image: url(https://www.cnnbrasil.com.br/wp-content/uploads/sites/12/2021/11/formiga.jpeg);
+}
+
+banner-4 {
+    background-image: url(https://www.cnnbrasil.com.br/wp-content/uploads/sites/12/2021/11/formiga.jpeg);
+}
+
+banner-5 {
+    background-image: url(https://www.cnnbrasil.com.br/wp-content/uploads/sites/12/2021/11/formiga.jpeg);
+}
+
+banner-6 {
+    background-image: url(https://www.cnnbrasil.com.br/wp-content/uploads/sites/12/2021/11/formiga.jpeg);
+}
+
+@media (max-width: 768px) {
+    .footer-navigation {
+        display: block;
+    }
+
+    .error {
+       display: none;
+    }
+    
+    .error-mobile {
+        display: block;
+        width: 200px;
+        height: 176px;
+        border: none;
+        border-radius: 8px;
+        font-size: 1.2rem;
+        color: white;
+        display: flex;
+        margin-left: 30px;
+        background-color:#cc2900;
+        justify-content: center;
+        flex-direction: initial;
+        margin: 0 auto;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .cards-content {
+        grid-template-columns: 1fr;
+        margin-top: 20px;
+    }
+
+}
+
+@media (max-width: 1280px) {
+    .error {
+        width: 1280px;
+    }
+}
+
+@media (max-width: 820px) {
+    .error {
+        width: 820px;
+    }
+}
+
+@media (max-width: 912px) {
+    .error {
+        width: 912px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .error {
+        width: 1024px;
+    }
+}
+
+@media (max-width: 800px) {
+    .error {
+        width: 800px;
+    }
 }
